Fix elements overflow-y on right sidebar menu
When Settings menu element height is more that the menu content height some item are hidden. overflow to scroll to make them visible on scroll

--- a/static/galene.css
+++ b/static/galene.css
@@ -966,7 +966,9 @@ h1 {
 .sidenav-content {
     padding: 10px;
     background: #fff;
-    height: 100%;
+    height: calc(100% - 56px);
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .sidenav-content h2 {
